crates/dag-macros/tests/ui/workflow_switch_duplicate_case_key.stderr
error: duplicate switch case key `a`
  --> tests/ui/workflow_switch_duplicate_case_key.rs:41:29
   |
41 |         cases = { "a" => a, "a" => b }
   |                             ^^^
